# towards-better-cxx-compilation-model

./: README  README.md
scientific_repo/: CMakeLists.txt
scientific_repo-headers/async_task_library/: CMakeLists.txt
scientific_repo-headers/async_task_library/include/atl/: task_queue.hxx  task_system.hxx
scientific_repo-headers/async_task_library/source/: task_system.cxx
scientific_repo-modules/: Build.bat
scientific_repo-modules/async_task_library/impl/: task_queue.cxx  task_system.cxx
scientific_repo-modules/async_task_library/itrf/: async_task_library.ixx  task_queue.ixx  task_system.ixx
scientific_repo-modules/physics_simulation/impl/: physics_simulation.cxx
scientific_repo-modules/physics_simulation/itrf/: physics_simulation.ixx
scientific_repo/async_task_library/source/: task_queue.cxx
scientific_repo/physics_simulation/: CMakeLists.txt
scientific_repo/physics_simulation/source/: physics_simulation.cxx
